force-app/main/default/objects/ppmail__Mail_Sending__c/ppmail__Mail_Sending__c.object-meta.xml
<CustomObject>
    <description>Represents a single email sending task. It contains all the information needed to send an email, such as the sender, recipients, content, and sending options. It is the central object for managing and tracking email sends.</description>
    <label>Mail Sending</label>
    <nameField>
        <displayFormat>MS-{000000}</displayFormat>
        <label>Mail Sending Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mail Sendings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>