force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__BCC_Emails__c.field-meta.xml
<CustomField>
    <fullName>ppmail__BCC_Emails__c</fullName>
    <description>A comma-separated list of email addresses for the BCC recipients.</description>
    <label>BCC Emails</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>