force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Campaign__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the Campaign record for report purposes.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Mail Sendings</relationshipLabel>
    <relationshipName>Mail_Sendings</relationshipName>
    <type>Lookup</type>
</CustomField>