force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Categories__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Categories__c</fullName>
    <description>A JSON-serialized list of categories to be assigned to the email for tracking and analytics in the mail service (e.g. SendGrid).</description>
    <label>Categories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>