force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__CC_Emails__c.field-meta.xml
<CustomField>
    <fullName>ppmail__CC_Emails__c</fullName>
    <description>A comma-separated list of email addresses for the CC recipients.</description>
    <label>CC Emails</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>