force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Count_Batches_Queued__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Count_Batches_Queued__c</fullName>
    <description>A roll-up summary field that counts the number of related Mail Sending Batch records with a status of &apos;Queued&apos;. This provides a real-time count of how many batches are currently queued for sending for this mail sending task.</description>
    <label>Count Batches Queued</label>
    <summaryFilterItems>
        <field>ppmail__Mail_Sending_Batch__c.ppmail__Status__c</field>
        <operation>equals</operation>
        <value>Queued</value>
    </summaryFilterItems>
    <summaryForeignKey>ppmail__Mail_Sending_Batch__c.ppmail__Mail_Sending__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>