force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Count_Batches_Total__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Count_Batches_Total__c</fullName>
    <description>A roll-up summary field that counts the total number of related Mail Sending Batch records. This provides a real-time count of the total number of batches for this mail sending task.</description>
    <label>Count Batches Total</label>
    <summaryForeignKey>ppmail__Mail_Sending_Batch__c.ppmail__Mail_Sending__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>