force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Email_Fields_Mapping__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Email_Fields_Mapping__c</fullName>
    <description>A JSON-formatted string that contains the mapping of the target record fields to the email fields.</description>
    <label>Email Fields Mapping</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>