force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__From_Email__c.field-meta.xml
<CustomField>
    <fullName>ppmail__From_Email__c</fullName>
    <description>The email address of the sender.</description>
    <label>From Email</label>
    <type>Email</type>
</CustomField>