force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__From_Name__c.field-meta.xml
<CustomField>
    <fullName>ppmail__From_Name__c</fullName>
    <description>The name of the sender.</description>
    <label>From Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>