force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Mail_Content__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Mail_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the Mail Content record that contains the content of the email to be sent.</description>
    <label>Mail Content</label>
    <referenceTo>ppmail__Mail_Content__c</referenceTo>
    <relationshipLabel>Mail Sendings</relationshipLabel>
    <relationshipName>Mail_Sendings</relationshipName>
    <type>Lookup</type>
</CustomField>