force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Mail_Content_is_Template__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Mail_Content_is_Template__c</fullName>
    <description>A formula field that indicates whether the related Mail Content record is a template. This is useful for differentiating between emails sent from a template and ad-hoc emails.</description>
    <formula>ppmail__Mail_Content__r.ppmail__Template__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Content is Template</label>
    <type>Checkbox</type>
</CustomField>