force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Mail_Service__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Mail_Service__c</fullName>
    <description>The mail service provider that will be used to send the email, such as SendGrid or Mailgun.</description>
    <label>Mail Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ppmail__Mail_Service</valueSetName>
    </valueSet>
</CustomField>