force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Related_To_ID__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Related_To_ID__c</fullName>
    <description>The ID of a record that this email is related to. This can be used to associate the email with a specific record in Salesforce, such as an Account or Opportunity.</description>
    <label>Related To ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>