force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Reply_To_Email__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Reply_To_Email__c</fullName>
    <description>The email address that will appear in the Reply-To field of the email.</description>
    <label>Reply To Email</label>
    <type>Email</type>
</CustomField>