force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Send_After__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Send_After__c</fullName>
    <description>A timestamp that specifies when the email should be sent. If this field is blank, the email will be sent as soon as possible.</description>
    <label>Send After</label>
    <type>DateTime</type>
</CustomField>