force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Separate_Email_for_Each_Recipient__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Separate_Email_for_Each_Recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, a separate email will be sent to each recipient. This is useful for personalization and tracking, as each recipient will receive their own unique email. If unchecked, a single email will be sent to all recipients.</description>
    <label>Separate Email for Each Recipient</label>
    <type>Checkbox</type>
</CustomField>