force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Status_Message__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Status_Message__c</fullName>
    <description>A message that provides more details about the current status of the mail sending task, such as an error message if the task has failed.</description>
    <label>Status Message</label>
    <length>4048</length>
    <type>LongTextArea</type>
</CustomField>