force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Target_IDs__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Target_IDs__c</fullName>
    <description>A comma-separated list of IDs of the target records (e.g., Leads, Contacts) to whom the email will be sent.</description>
    <label>Target IDs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>