force-app/main/default/objects/ppmail__Mail_Sending__c/fields/ppmail__Target_List_View__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Target_List_View__c</fullName>
    <description>The API name of the list view that was used to select the target recipients for this email.</description>
    <label>Target List View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>