force-app/main/default/objects/ppmail__Mail_Sending__c/listViews/ppmail__All_Mail_Sendings.listView-meta.xml
<ListView>
    <fullName>ppmail__All_Mail_Sendings</fullName>
    <columns>NAME</columns>
    <columns>ppmail__From_Email__c</columns>
    <columns>ppmail__Mail_Content__c</columns>
    <columns>ppmail__Status__c</columns>
    <columns>ppmail__Count_Batches_Total__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Mail Sendings</label>
</ListView>